testsuite/tests/grammar/invalid_lkt/no_grammar.lkt
import common
import lexer_example
